# Wayherb

./: LICENSE  Makefile  README  build  clean  config.h  herbew  herbew.c  meson.build
.ccls-cache/@@home@muevoid@Documents@Projects@Code@wayherb/: @include@bits@alltypes.h.blob  @include@bits@mman.h.blob  @include@bits@posix.h.blob  @include@bits@signal.h.blob  @include@features.h.blob  @include@linux@input-event-codes.h.blob  @include@signal.h.blob  @include@string.h.blob  @include@strings.h.blob  @include@sys@mman.h.blob  @include@unistd.h.blob  @lib@clang@10.0.1@include@stdbool.h.blob
.ccls-cache/@home@muevoid@Documents@Projects@Code@wayherb/: src@wayland.c.blob
include/: config.h  render.h  shm.h  util.h  wayland.h
lib/: meson.build
src/: herbew.c  util.c  wayherb.c  wayland.c
